# Compression-Tool

./: .gitignore  CMakeLists.txt
benchmarks/: compression_benchmark.cpp  lz78_compression_benchmark.cpp  pipeline_benchmark.cpp
include/: BitReader.h  BitWriter.h  Engine.h  Huffman.h  IsCodec.h  LZ77.h  LZ78.h  SPSC.h  Task.h  ThreadPool.h  Token.h
src/: BitReader.cpp  BitWriter.cpp  Engine.cpp  LZ77.cpp  LZ78.cpp  ThreadPool.cpp  main.cpp
tests/: BitReaderWriter_test.cpp  LZ77_test.cpp  LZ78_test.cpp
